--- a/src/assets/i18n/messages/errors/en.json
+++ b/src/assets/i18n/messages/errors/en.json
@@ -37,8 +37,6 @@
     "wrong-last-name-format": "Last name should be a string",
     "wrong-location-length": "Min length of the location is 8 symbols, max is 128 symbols",
     "wrong-location-format": "Location should be a string",
-    "wrong-company-length": "Min length of the company is 2 symbols, max is 64 symbols",
-    "wrong-company-format": "Company should be a string",
     "wrong-fqdn": "Wrong fully qualified domain name (URL)",
     "user-photo-must-be-base64": "User profile photo must be PNG Base64-encoded",
     "wrong-passphrase-format": "Wrong passphrase format",
@@ -48,47 +46,33 @@
     "wrong-two-fa-token-format": "Wrong MFA token format",
     "wrong-two-fa-token-length": "Wrong MFA token length",
     "corrupted-recovery-keys": "Corrupted recovery keys",
-    "wrong-role-value": "Wrong value of a member role",
-    "wrong-company-role-name-format": "Wrong custom company role name format",
-    "wrong-company-role-name-length": "Wrong custom company role name length",
-    "wrong-company-role-description-format": "Wrong custom company role description format",
-    "wrong-company-role-description-length": "Wrong custom company role description length",
-    "wrong-company-role-scope-length": "Wrong custom company role scopes length",
-    "wrong-new-role-assignees-length": "Wrong length of new role assignees",
     "wrong-contact-message-format": "Wrong contact message format",
     "wrong-contact-message-length": "Wrong contact message length",
-    "wrong-product-title-format": "Wrong product title format",
-    "wrong-product-title-length": "Wrong product title length",
-    "wrong-product-description-format": "Wrong product description format",
-    "wrong-product-description-length": "Wrong product description length",
-    "wrong-product-contact-person-format": "Wrong product contact person format",
-    "wrong-product-contact-person-length": "Wrong product contact person length",
-    "wrong-product-location-format": "Wrong product location format",
-    "wrong-product-location-length": "Wrong product location length",
-    "wrong-product-price-format": "Wrong product price format",
-    "wrong-invited-users-list": "Wrong invited users list"
+    "wrong-article-name-format": "Wrong article name format",
+    "wrong-article-name-length": "Wrong article name length",
+    "wrong-article-description-format": "Wrong article description format",
+    "wrong-article-description-length": "Wrong article description length",
+    "wrong-category-name-format": "Wrong category name format",
+    "wrong-category-name-length": "Wrong category name length",
+    "wrong-category-description-format": "Wrong category description format",
+    "wrong-category-description-length": "Wrong category description length",
+    "wrong-category-content-format": "Wrong category content format",
+    "wrong-category-content-length": "Wrong category content length",
+    "wrong-category-id-format": "Wrong category ID format",
+    "wrong-article-id-format": "Wrong article ID format",
+    "wrong-categories-length": "Wrong categories length",
+    "wrong-articles-length": "Wrong articles length"
   },
   "wrong-timeframe": "Wrong timeframe",
   "invalid-recovery-keys": "Invalid recovery keys",
   "email-already-changed": "Email has already been changed",
   "email-already-taken": "Provided email address has already been taken",
   "password-already-changed": "Password was changed less than 24h ago",
-  "company-members-limit-reached": "You've reached the limit of users you can invite while registration",
-  "member-already-on-list": "Company member is already on the list",
-  "company-already-exists": "Company with this name already exists",
   "phone-already-taken": "Mobile phone has already been taken",
   "wrong-deletion-confirmation": "Wrong deletion confirmation data",
   "parse-error": "Parse error",
-  "company-not-found": "Company has not been found",
-  "company-member-not-found": "Company member has not been found",
-  "role-doesnt-exists": "Role does not exist",
-  "product-not-found": "Product has not been found, please, check the link once again",
   "category-not-found": "Category not found",
   "order-by-error": "Wrong order by value",
   "order-error": "Wrong order value",
-  "subcategory-not-found": "Subcategory not found",
-  "wrong-currency": "Wrong currency",
-  "user-not-logged-in": "User not logged in",
-  "product-already-in-favorites": "Product has already been added to favorites",
-  "user-not-found": "Marketplace user has not been found"
+  "user-not-logged-in": "User not logged in"
 }
