--- a/src/assets/i18n/messages/responses/ru.json
+++ b/src/assets/i18n/messages/responses/ru.json
@@ -2,19 +2,12 @@
   "success": "Успех",
   "photo-uploaded": "Фото загружено",
   "user-updated": "Информация о пользователе успешно обновлена",
-  "company-updated": "Информация о компании успешно обновлена",
-  "company-member-deleted": "Участник компании успешно удален",
-  "company-role-created": "Пользовательская роль пользователя компании успешно создана",
-  "company-role-deleted": "Пользовательская роль компании успешно удалена",
-  "company-role-updated": "Роль компании успешно обновлена",
   "contact-message-sent": "Контактное сообщение успешно отправлено",
-  "product-posted": "Продукт был успешно размещен",
-  "product-updated": "Продукт успешно обновлен",
-  "product-deleted": "Продукт был успешно удален",
-  "company-product-deleted": "Продукт компании был успешно удален",
-  "product-deleted-from-favorites": "Товар был удален из избранного",
-  "product-added-to-favorites": "Товар был добавлен в избранное",
-  "company-ownership-transferred": "Передача права собственности на компанию была успешно завершена",
-  "user-invited": "Пользователь(и) были приглашены в компанию",
-  "company-member-role-changed": "Роль участника компании была успешно изменена"
+  "article-created": "Статья успешно создана",
+  "article-deleted": "Статья успешно удалена",
+  "article-edited": "Статья успешно отредактирована",
+  "article-publish-status-changed": "Статус публикации статьи успешно изменен",
+  "category-created": "Категория успешно создана",
+  "category-deleted": "Категория успешно удалена",
+  "category-edited": "Категория успешно отредактирована"
 }
