--- a/src/assets/i18n/messages/errors/pl.json
+++ b/src/assets/i18n/messages/errors/pl.json
@@ -37,8 +37,6 @@
     "wrong-last-name-format": "Nazwisko powinno być ciągiem znaków",
     "wrong-location-length": "Minimalna długość lokalizacji to 8 symboli, maksymalna to 128 symboli",
     "wrong-location-format": "Lokalizacja powinna być ciągiem znaków",
-    "wrong-company-length": "Minimalna długość firmy to 2 symbole, maksymalna to 64 symbole",
-    "wrong-company-format": "Firma powinna być ciągiem znaków",
     "wrong-fqdn": "Niewłaściwa w pełni kwalifikowana nazwa domeny (URL)",
     "user-photo-must-be-base64": "Zdjęcie profilowe użytkownika musi być PNG zakodowane w Base64",
     "wrong-passphrase-format": "Nieprawidłowy format hasła",
@@ -48,47 +46,33 @@
     "wrong-two-fa-token-format": "Niewłaściwy format tokena MFA",
     "wrong-two-fa-token-length": "Niewłaściwa długość tokena MFA",
     "corrupted-recovery-keys": "Uszkodzone klucze odzyskiwania",
-    "wrong-role-value": "Nieprawidłowa wartość roli członka",
-    "wrong-company-role-name-format": "Nieprawidłowy, niestandardowy format nazwy roli firmy",
-    "wrong-company-role-name-length": "Nieprawidłowa niestandardowa długość nazwy roli firmy",
-    "wrong-company-role-description-format": "Nieprawidłowy, niestandardowy format opisu roli firmy",
-    "wrong-company-role-description-length": "Nieprawidłowa długość opisu roli niestandardowej firmy",
-    "wrong-company-role-scope-length": "Nieprawidłowa długość niestandardowych zakresów ról firmy",
-    "wrong-new-role-assignees-length": "Nieprawidłowa długość nowych przypisanych ról",
     "wrong-contact-message-format": "Niewłaściwy format wiadomości kontaktowych",
     "wrong-contact-message-length": "Niewłaściwa długość wiadomości kontaktowej",
-    "wrong-product-title-format": "Niewłaściwy format tytułu produktu",
-    "wrong-product-title-length": "Niewłaściwa długość tytułu produktu",
-    "wrong-product-description-format": "Niewłaściwy format opisu produktu",
-    "wrong-product-description-length": "Niewłaściwa długość opisu produktu",
-    "wrong-product-contact-person-format": "Niewłaściwy format osoby kontaktowej produktu",
-    "wrong-product-contact-person-length": "Niewłaściwa długość osoby kontaktowej produktu",
-    "wrong-product-location-format": "Niewłaściwy format lokalizacji produktu",
-    "wrong-product-location-length": "Niewłaściwa długość lokalizacji produktu",
-    "wrong-product-price-format": "Niewłaściwy format ceny produktu",
-    "wrong-invited-users-list": "Niewłaściwa lista zaproszonych użytkowników"
+    "wrong-article-name-format": "Nieprawidłowy format nazwy artykułu",
+    "wrong-article-name-length": "Nieprawidłowa długość nazwy artykułu",
+    "wrong-article-description-format": "Nieprawidłowy format opisu artykułu",
+    "wrong-article-description-length": "Nieprawidłowa długość opisu artykułu",
+    "wrong-category-name-format": "Nieprawidłowy format nazwy kategorii",
+    "wrong-category-name-length": "Nieprawidłowa długość nazwy kategorii",
+    "wrong-category-description-format": "Nieprawidłowy format opisu kategorii",
+    "wrong-category-description-length": "Długość opisu nieprawidłowej kategorii",
+    "wrong-category-content-format": "Niewłaściwy format treści kategorii",
+    "wrong-category-content-length": "Długość treści w niewłaściwej kategorii",
+    "wrong-category-id-format": "Nieprawidłowy format identyfikatora kategorii",
+    "wrong-article-id-format": "Nieprawidłowy format identyfikatora artykułu",
+    "wrong-categories-length": "Nieprawidłowa długość kategorii",
+    "wrong-articles-length": "Nieprawidłowa długość artykułów"
   },
   "wrong-timeframe": "Niewłaściwy przedział czasowy",
   "invalid-recovery-keys": "Nieprawidłowe klucze odzyskiwania",
   "email-already-changed": "Adres e-mail został już zmieniony",
   "email-already-taken": "Podany adres e-mail został już zajęty",
   "password-already-changed": "Hasło zostało zmienione mniej niż 24 godziny temu",
-  "company-members-limit-reached": "Osiągnąłeś limit użytkowników, których możesz zaprosić podczas rejestracji",
-  "member-already-on-list": "Członek firmy jest już na liście",
-  "company-already-exists": "Firma o takiej nazwie już istnieje",
   "phone-already-taken": "Telefon komórkowy został już zajęty",
   "wrong-deletion-confirmation": "Błędne dane potwierdzające usunięcie",
   "parse-error": "Błąd analizy",
-  "company-not-found": "Firma nie została znaleziona",
-  "company-member-not-found": "Nie znaleziono członka firmy",
-  "role-doesnt-exists": "Rola nie istnieje",
-  "product-not-found": "Produkt nie został znaleziony, proszę sprawdzić link jeszcze raz",
   "category-not-found": "Kategorii nie znaleziono",
   "order-by-error": "Niewłaściwa kolejność według wartości",
   "order-error": "Nieprawidłowa wartość kolejności",
-  "subcategory-not-found": "Nie znaleziono podkategorii",
-  "wrong-currency": "Zła waluta",
-  "user-not-logged-in": "Użytkownik niezalogowany",
-  "product-already-in-favorites": "Produkt został już dodany do ulubionych",
-  "user-not-found": "Użytkownik nie został znaleziony"
+  "user-not-logged-in": "Użytkownik niezalogowany"
 }
