--- a/src/assets/i18n/messages/errors/ru.json
+++ b/src/assets/i18n/messages/errors/ru.json
@@ -48,47 +48,33 @@
     "wrong-two-fa-token-format": "Неверный формат токена MFA",
     "wrong-two-fa-token-length": "Неправильная длина токена MFA",
     "corrupted-recovery-keys": "Поврежденные ключи восстановления",
-    "wrong-role-value": "Неверное значение роли участника",
-    "wrong-company-role-name-format": "Неправильный формат имени роли компании",
-    "wrong-company-role-name-length": "Неверная длина имени пользовательской роли компании",
-    "wrong-company-role-description-format": "Неправильный формат описания роли компании",
-    "wrong-company-role-description-length": "Неверная длина пользовательского описания роли компании",
-    "wrong-company-role-scope-length": "Неверная длина пользовательских ролей компании",
-    "wrong-new-role-assignees-length": "Неверная длина новых исполнителей роли",
     "wrong-contact-message-format": "Неправильный формат контактного сообщения",
     "wrong-contact-message-length": "Неправильная длина контактного сообщения",
-    "wrong-product-title-format": "Неправильный формат названия продукта",
-    "wrong-product-title-length": "Неправильная длина названия продукта",
-    "wrong-product-description-format": "Неправильный формат описания продукта",
-    "wrong-product-description-length": "Неправильная длина описания продукта",
-    "wrong-product-contact-person-format": "Неправильный формат контактного лица по продукту",
-    "wrong-product-contact-person-length": "Неправильная длина контактного лица по продукту",
-    "wrong-product-location-format": "Неправильный формат расположения продукта",
-    "wrong-product-location-length": "Неправильная длина расположения продукта",
-    "wrong-product-price-format": "Неправильный формат цены продукта",
-    "wrong-invited-users-list": "Неправильный список приглашенных пользователей"
+    "wrong-article-name-format": "Неверный формат названия статьи",
+    "wrong-article-name-length": "Неверная длина названия статьи",
+    "wrong-article-description-format": "Неверный формат описания статьи",
+    "wrong-article-description-length": "Неверная длина описания статьи",
+    "wrong-category-name-format": "Неверный формат названия категории",
+    "wrong-category-name-length": "Неверная длина имени категории",
+    "wrong-category-description-format": "Неверный формат описания категории",
+    "wrong-category-description-length": "Неверная длина описания категории",
+    "wrong-category-content-format": "Неправильный формат контента категории",
+    "wrong-category-content-length": "Неверная длина контента категории",
+    "wrong-category-id-format": "Неверный формат идентификатора категории",
+    "wrong-article-id-format": "Неверный формат идентификатора статьи",
+    "wrong-categories-length": "Неверная длина категорий",
+    "wrong-article-length": "Неверная длина статьи"
   },
   "wrong-timeframe": "Неверный таймфрейм",
   "invalid-recovery-keys": "Недействительные ключи восстановления",
   "email-already-changed": "Электронная почта уже изменена",
   "email-already-taken": "Указанный адрес электронной почты уже занят",
   "password-already-changed": "Пароль был изменен менее 24 часов назад",
-  "company-members-limit-reached": "Вы достигли лимита пользователей, которых можете пригласить при регистрации",
-  "member-already-on-list": "Член компании уже есть в списке",
-  "company-already-exists": "Компания с таким именем уже существует",
   "phone-already-taken": "Мобильный телефон уже занят",
   "wrong-deletion-confirmation": "Неправильные данные подтверждения удаления",
   "parse-error": "Ошибка синтаксического анализа",
-  "company-not-found": "Компания не найдена",
-  "company-member-not-found": "Участник компании не найден",
-  "role-doesnt-exists": "Роль не существует",
-  "product-not-found": "Товар не найден, пожалуйста, проверьте ссылку еще раз",
   "category-not-found": "Категория не найдена",
   "order-by-error": "Неправильный порядок по значению",
   "order-error": "Неправильное значение порядка",
-  "subcategory-not-found": "Подкатегория не найдена",
-  "wrong-currency": "Неправильная валюта",
-  "user-not-logged-in": "Пользователь не вошел в систему",
-  "product-already-in-favorites": "Товар уже добавлен в избранное",
-  "user-not-found": "Пользователь не найден"
+  "user-not-logged-in": "Пользователь не вошел в систему"
 }
