--- a/src/assets/i18n/pages/articles/pl.json
+++ b/src/assets/i18n/pages/articles/pl.json
@@ -3,5 +3,10 @@
   "articleCategory": "Kategoria: {{ categoryName }}",
   "articleTags": "Tagi: {{ categoryTags }}",
   "noArticles": "Nie znaleziono artykułów",
-  "createArticleTitle": "Utwórz nowy artykuł"
+  "createArticleTitle": "Utwórz nowy artykuł",
+  "articleLanguage": "Język artykułu: {{ articleLanguage }}",
+  "articleCreatedAt": "Artykuł utworzony o: {{ createdAt }}",
+  "articleUpdatedAt": "Artykuł zaktualizowano o: {{ updatedAt }}",
+  "articleEditionMode": "Tryb edycji artykułu",
+  "articlePreviewMode": "Tryb podglądu artykułu"
 }
