--- a/src/assets/i18n/components/button/pl.json
+++ b/src/assets/i18n/components/button/pl.json
@@ -56,5 +56,9 @@
   "deleteArticle": "Usuń artykuł",
   "deleteArticlePosted": "Usuń artykuł z opublikowanego",
   "postArticle": "Opublikuj artykuł",
-  "closeEditMode": "Zamknij tryb edycji artykułu"
+  "closeEditMode": "Zamknij tryb edycji artykułu",
+  "createAuthor": "Utwórz autora",
+  "authors": "Autorzy",
+  "certifications": "Certyfikaty",
+  "createCert": "Utwórz certyfikat"
 }
