--- a/src/assets/i18n/components/input/en.json
+++ b/src/assets/i18n/components/input/en.json
@@ -82,5 +82,29 @@
   "editCategoryNameLabel": "Edit category name",
   "editCategoryNamePlaceholder": "Provide new name for the category",
   "editCategoryDescLabel": "Edit category description",
-  "editCategoryDescPlaceholder": "Provide new description for the category"
+  "editCategoryDescPlaceholder": "Provide new description for the category",
+  "authorFirstNameLabel": "Author first name",
+  "authorFirstNamePlaceholder": "Provide author's first name",
+  "authorFirstNameDesc": "First name will be displayed on the About page and under the articles",
+  "authorLastNameLabel": "Author last name",
+  "authorLastNamePlaceholder": "Provide author's last name",
+  "authorLastNameDesc": "Last name name will be displayed on the About page and under the articles",
+  "authorDescNameLabel": "Author's description",
+  "authorDescNamePlaceholder": "Provide author's description",
+  "authorDescNameDesc": "Author's description is the couple of sentences about the author that is going to be displayed only on the About page",
+  "certNameLabel": "Certificate name",
+  "certNamePlaceholder": "Provide the name of the certificate",
+  "certNameDesc": "The name/title of the certificate",
+  "certDescLabel": "Certificate description",
+  "certDescPlaceholder": "Provide the description of the certificate",
+  "certDescDesc": "The description of the certificate will be displayed on the 'About' page",
+  "certObtainingDateLabel": "Certification obtaining date",
+  "certObtainingDatePlaceholder": "Provide the date when the certificate was obtained",
+  "certObtainingDateDesc": "This date is going ot be shown as 'From' date",
+  "certExpirationDateLabel": "Certification expiration date",
+  "certExpirationDatePlaceholder": "Provide the date when the certificate expires",
+  "certExpirationDateDesc": "If there is no such date, just leave this field blank",
+  "certObtainedSkillLabel": "Certification obtained skills",
+  "certObtainedSkillPlaceholder": "Provide skills that you obtained while getting this certification",
+  "certObtainedSkillDesc": "Press Space to add the new one and click on the existing one to delete it"
 }
