--- a/src/assets/i18n/components/input/pl.json
+++ b/src/assets/i18n/components/input/pl.json
@@ -82,5 +82,29 @@
   "editCategoryNameLabel": "Edytuj nazwę kategorii",
   "editCategoryNamePlaceholder": "Podaj nową nazwę kategorii",
   "editCategoryDescLabel": "Edytuj opis kategorii",
-  "editCategoryDescPlaceholder": "Podaj nowy opis kategorii"
+  "editCategoryDescPlaceholder": "Podaj nowy opis kategorii",
+  "authorFirstNameLabel": "Imię autora",
+  "authorFirstNamePlaceholder": "Podaj imię autora",
+  "authorFirstNameDesc": "Imię będzie wyświetlane na stronie O mnie i pod artykułami",
+  "authorLastNameLabel": "Nazwisko autora",
+  "authorLastNamePlaceholder": "Podaj nazwisko autora",
+  "authorLastNameDesc": "Nazwisko będzie wyświetlane na stronie O mnie i pod artykułami",
+  "authorDescNameLabel": "Opis autora",
+  "authorDescNamePlaceholder": "Podaj opis autora",
+  "authorDescNameDesc": "Opis autora to kilka zdań o autorze, które będą wyświetlane tylko na stronie O mnie",
+  "certNameLabel": "Nazwa certyfikatu",
+  "certNamePlaceholder": "Podaj nazwę certyfikatu",
+  "certNameDesc": "Nazwa/tytuł certyfikatu",
+  "certDescLabel": "Opis certyfikatu",
+  "certDescPlaceholder": "Podaj opis certyfikatu",
+  "certDescDesc": "Opis certyfikatu zostanie wyświetlony na stronie \"Informacje\"",
+  "certObtainingDateLabel": "Data uzyskania certyfikatu",
+  "certObtainingDatePlaceholder": "Podaj datę uzyskania certyfikatu",
+  "certObtainingDateDesc": "Ta data będzie wyświetlana jako data \"Od\"",
+  "certExpirationDateLabel": "Data wygaśnięcia certyfikatu",
+  "certExpirationDatePlaceholder": "Podaj datę wygaśnięcia certyfikatu",
+  "certExpirationDateDesc": "Jeśli nie ma takiej daty, po prostu pozostaw to pole puste",
+  "certObtainedSkillLabel": "Umiejętności uzyskane w ramach certyfikacji",
+  "certObtainedSkillPlaceholder": "Podaj umiejętności, które uzyskałeś podczas uzyskiwania tej certyfikacji",
+  "certObtainedSkillDesc": "Naciśnij spację, aby dodać nową, a następnie kliknij istniejącą, aby ją usunąć"
 }
