--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -82,5 +82,29 @@
   "editCategoryNameLabel": "Изменить название категории",
   "editCategoryNamePlaceholder": "Укажите новое имя для категории",
   "editCategoryDescLabel": "Изменить описание категории",
-  "editCategoryDescPlaceholder": "Укажите новое описание категории"
+  "editCategoryDescPlaceholder": "Укажите новое описание категории",
+  "authorFirstNameLabel": "Имя автора",
+  "authorFirstNamePlaceholder": "Укажите имя автора",
+  "authorFirstNameDesc": "Имя будет отображаться на странице \"О нас\" и под статьями",
+  "authorLastNameLabel": "Фамилия автора",
+  "authorLastNamePlaceholder": "Укажите фамилию автора",
+  "authorLastNameDesc": "Фамилия будет отображаться на странице \"О нас\" и под статьями",
+  "authorDescNameLabel": "Описание автора",
+  "authorDescNamePlaceholder": "Укажите описание автора",
+  "authorDescNameDesc": "Описание автора — это пара предложений об авторе, которые будут отображаться только на странице \"О нас\"",
+  "certNameLabel": "Имя сертификата",
+  "certNamePlaceholder": "Укажите имя сертификата",
+  "certNameDesc": "Имя/название сертификата",
+  "certDescLabel": "Описание сертификата",
+  "certDescPlaceholder": "Укажите описание сертификата",
+  "certDescDesc": "Описание сертификата будет отображаться на странице \"О нас\"",
+  "certObtainingDateLabel": "Дата получения сертификата",
+  "certObtainingDatePlaceholder": "Укажите дату получения сертификата",
+  "certObtainingDateDesc": "Эта дата не будет отображаться как дата \"От\"",
+  "certExpirationDateLabel": "Дата истечения срока действия сертификата",
+  "certExpirationDatePlaceholder": "Укажите дату истечения срока действия сертификата",
+  "certExpirationDateDesc": "Если такой даты нет, просто оставьте это поле пустым",
+  "certObtainedSkillLabel": "Навыки, полученные при сертификации",
+  "certObtainedSkillPlaceholder": "Укажите навыки, которые вы получили при получении этой сертификации",
+  "certObtainedSkillDesc": "Нажмите пробел, чтобы добавить новый, и щелкните по существующему, чтобы удалить его"
 }
