--- a/src/assets/i18n/messages/errors/ru.json
+++ b/src/assets/i18n/messages/errors/ru.json
@@ -76,5 +76,6 @@
   "category-not-found": "Категория не найдена",
   "order-by-error": "Неправильный порядок по значению",
   "order-error": "Неправильное значение порядка",
-  "user-not-logged-in": "Пользователь не вошел в систему"
+  "user-not-logged-in": "Пользователь не вошел в систему",
+  "author-not-found": "Автор не найден"
 }
