--- a/src/assets/i18n/pages/titles/en.json
+++ b/src/assets/i18n/pages/titles/en.json
@@ -1,18 +1,24 @@
 {
-  "home": "MBPB | Home",
-  "tac": "MBPB | Terms & Conditions",
-  "resetPassword": "MBPB | Reset Password",
-  "registration": "MBPB | Registration",
-  "forgotPassword": "MBPB | Forgot Password",
-  "accConfirm": "MBPB | Account Confirmation",
-  "dashboard": "MBPB | Dashboard",
-  "settings": "MBPB | Settings",
-  "recoverAccount": "MBPB | Recover Account",
-  "emailChangeConfirm": "MBPB | Email Change Confirmation",
-  "login": "MBPB | Login",
-  "contact": "MBPB | Contact",
-  "articles": "MBPB | Articles",
-  "categories": "MBPB | Categories",
-  "createArticle": "MBPB | Create article",
-  "article": "MBPB | Article | {{ articleName }}"
+  "home": "Bahdashych on Security | Home",
+  "tac": "Bahdashych on Security | Terms & Conditions",
+  "resetPassword": "Bahdashych on Security | Reset Password",
+  "registration": "Bahdashych on Security | Registration",
+  "forgotPassword": "Bahdashych on Security | Forgot Password",
+  "accConfirm": "Bahdashych on Security | Account Confirmation",
+  "dashboard": "Bahdashych on Security | Dashboard",
+  "settings": "Bahdashych on Security | Settings",
+  "recoverAccount": "Bahdashych on Security | Recover Account",
+  "emailChangeConfirm": "Bahdashych on Security | Email Change Confirmation",
+  "login": "Bahdashych on Security | Login",
+  "contact": "Bahdashych on Security | Contact",
+  "articles": "Bahdashych on Security | Articles",
+  "categories": "Bahdashych on Security | Categories",
+  "createArticle": "Bahdashych on Security | Create article",
+  "article": "Bahdashych on Security | Article | {{ articleName }}",
+  "author": "Bahdashych on Security | Author | {{ authorFullName }}",
+  "authors": "Bahdashych on Security | Authors",
+  "createAuthors": "Bahdashych on Security | Create Author",
+  "certification": "Bahdashych on Security | Certification | {{ certName }}",
+  "certifications": "Bahdashych on Security | Certifications",
+  "createCertification": "Bahdashych on Security | Create Certification"
 }
