--- a/src/assets/i18n/pages/titles/ru.json
+++ b/src/assets/i18n/pages/titles/ru.json
@@ -1,18 +1,24 @@
 {
-  "home": "MBPB | Домашняя",
-  "tac": "MBPB | Условия и положения",
-  "resetPassword": "MBPB | Сбросить пароль",
-  "registration": "MBPB | Регистрация",
-  "forgotPassword": "MBPB | Забыли пароль",
-  "accConfirm": "MBPB | Подтверждение учетной записи",
-  "dashboard": "MBPB | Панель управления",
-  "settings": "MBPB | Настройки",
-  "recoverAccount": "MBPB | Восстановить аккаунт",
-  "emailChangeConfirm": "MBPB | Подтверждение изменения по электронной почте",
-  "login": "MBPB | Войти",
-  "contact": "MBPB | Контакт",
-  "articles": "MBPB | Статьи",
-  "categories": "MBPB | Категории",
-  "createArticle": "MBPB | Написать статью",
-  "article": "MBPB | Статья | {{ articleName }}"
+  "home": "Bahdashych on Security | Домашняя",
+  "tac": "Bahdashych on Security | Условия и положения",
+  "resetPassword": "Bahdashych on Security | Сбросить пароль",
+  "registration": "Bahdashych on Security | Регистрация",
+  "forgotPassword": "Bahdashych on Security | Забыли пароль",
+  "accConfirm": "Bahdashych on Security | Подтверждение учетной записи",
+  "dashboard": "Bahdashych on Security | Панель управления",
+  "settings": "Bahdashych on Security | Настройки",
+  "recoverAccount": "Bahdashych on Security | Восстановить аккаунт",
+  "emailChangeConfirm": "Bahdashych on Security | Подтверждение изменения по электронной почте",
+  "login": "Bahdashych on Security | Войти",
+  "contact": "Bahdashych on Security | Контакт",
+  "articles": "Bahdashych on Security | Статьи",
+  "categories": "Bahdashych on Security | Категории",
+  "createArticle": "Bahdashych on Security | Написать статью",
+  "article": "Bahdashych on Security | Статья | {{ articleName }}",
+  "author": "Bahdashych on Security | Автор | {{ authorFullName }}",
+  "authors": "Bahdashych on Security | Авторы",
+  "createAuthors": "Bahdashych on Security | Создание автора",
+  "certification": "Bahdashych on Security | Сертификат | {{ certName }}",
+  "certifications": "Bahdashych on Security | Сертификаты",
+  "createCertification": "Bahdashych on Security | Создать сертификат"
 }
