--- a/src/assets/i18n/components/button/en.json
+++ b/src/assets/i18n/components/button/en.json
@@ -56,5 +56,9 @@
   "deleteArticle": "Delete article",
   "deleteArticlePosted": "Delete article from posted",
   "postArticle": "Post article",
-  "closeEditMode": "Close edit article mode"
+  "closeEditMode": "Close edit article mode",
+  "createAuthor": "Create author",
+  "authors": "Authors",
+  "certifications": "Certifications",
+  "createCert": "Create a certification"
 }
