uploading pdf files

--- a/src/assets/i18n/components/button/en.json
+++ b/src/assets/i18n/components/button/en.json
@@ -60,5 +60,7 @@
   "createAuthor": "Create author",
   "authors": "Authors",
   "certifications": "Certifications",
-  "createCert": "Create a certification"
+  "createCert": "Create a certification",
+  "selectCertificationFile": "Select certification file",
+  "deleteCertFile": "Delete certification file"
 }
