--- a/src/assets/i18n/components/button/ru.json
+++ b/src/assets/i18n/components/button/ru.json
@@ -60,5 +60,7 @@
   "createAuthor": "Создать автора",
   "authors": "Авторы",
   "certifications": "Сертификаты",
-  "createCert": "Создать сертификат"
+  "createCert": "Создать сертификат",
+  "selectCertificationFile": "Выбрать файл сертификации",
+  "deleteCertFile": "Удалить файл сертификации"
 }
