--- a/src/assets/i18n/pages/certifications/pl.json
+++ b/src/assets/i18n/pages/certifications/pl.json
@@ -1,3 +1,5 @@
 {
-  "createCertTitle": "Utwórz certyfikat"
+  "createCertTitle": "Utwórz certyfikat",
+  "certificateFileName": "Nazwa pliku certyfikatu: {{ certFileName }}",
+  "certificateFileSize": "Rozmiar pliku certyfikatu: {{ certFileSize }}MB"
 }
