--- a/src/assets/i18n/pages/certifications/ru.json
+++ b/src/assets/i18n/pages/certifications/ru.json
@@ -1,3 +1,5 @@
 {
-  "createCertTitle": "Создание сертификата"
+  "createCertTitle": "Создание сертификата",
+  "certificateFileName": "Имя файла сертификата: {{ certFileName }}",
+  "certificateFileSize": "Размер файла сертификата: {{ certFileSize }}MB"
 }
