--- a/src/assets/i18n/messages/errors/en.json
+++ b/src/assets/i18n/messages/errors/en.json
@@ -61,7 +61,29 @@
     "wrong-category-id-format": "Wrong category ID format",
     "wrong-article-id-format": "Wrong article ID format",
     "wrong-categories-length": "Wrong categories length",
-    "wrong-articles-length": "Wrong articles length"
+    "wrong-articles-length": "Wrong articles length",
+    "wrong-link-format": "Wrong link format",
+    "wrong-date-format": "Wrong date format",
+    "wrong-author-first-format": "Wrong author first name format",
+    "wrong-author-first-length": "Wrong author first name length",
+    "wrong-author-last-format": "Wrong author last name format",
+    "wrong-author-last-length": "Wrong author last name length",
+    "wrong-company-name-format": "Wrong company name format",
+    "wrong-company-name-length": "Wrong company name length",
+    "wrong-company-desc-format": "Wrong company description format",
+    "wrong-company-desc-length": "Wrong company description length",
+    "wrong-cert-name-format": "Wrong certification name format",
+    "wrong-cert-name-length": "Wrong certification name length",
+    "wrong-cert-desc-format": "Wrong certification description format",
+    "wrong-cert-desc-length": "Wrong certification description length",
+    "wrong-company-link-title-format": "Wrong company link title format",
+    "wrong-company-link-title-length": "Wrong company link title length",
+    "wrong-author-id-format": "Wrong author ID format",
+    "wrong-experience-id-format": "Wrong experience ID format",
+    "wrong-certification-id-format": "Wrong certification ID format",
+    "wrong-contact-name-format": "Wrong contact name format",
+    "wrong-contact-name-length": "Wrong contact name length",
+    "wrong-pdf-name-format": "Wrong PDF name format"
   },
   "wrong-timeframe": "Wrong timeframe",
   "invalid-recovery-keys": "Invalid recovery keys",
@@ -75,5 +97,8 @@
   "order-by-error": "Wrong order by value",
   "order-error": "Wrong order value",
   "user-not-logged-in": "User not logged in",
-  "author-not-found": "Author not found"
+  "author-not-found": "Author not found",
+  "article-not-found": "Article not found",
+  "certification-not-found": "Certification not found",
+  "experience-not-found": "Experience not found"
 }
