--- a/src/assets/i18n/messages/errors/pl.json
+++ b/src/assets/i18n/messages/errors/pl.json
@@ -61,7 +61,29 @@
     "wrong-category-id-format": "Nieprawidłowy format identyfikatora kategorii",
     "wrong-article-id-format": "Nieprawidłowy format identyfikatora artykułu",
     "wrong-categories-length": "Nieprawidłowa długość kategorii",
-    "wrong-articles-length": "Nieprawidłowa długość artykułów"
+    "wrong-articles-length": "Nieprawidłowa długość artykułów",
+    "wrong-link-format": "Nieprawidłowy format łącza",
+    "wrong-date-format": "Nieprawidłowy format daty",
+    "wrong-author-first-format": "Nieprawidłowy format imienia autora",
+    "wrong-author-first-length": "Nieprawidłowa długość imienia autora",
+    "wrong-author-last-format": "Nieprawidłowy format nazwiska autora",
+    "wrong-author-last-length": "Nieprawidłowa długość nazwiska autora",
+    "wrong-company-name-format": "Nieprawidłowy format nazwy firmy",
+    "wrong-company-name-length": "Nieprawidłowa długość nazwy firmy",
+    "wrong-company-desc-format": "Nieprawidłowy format opisu firmy",
+    "wrong-company-desc-length": "Nieprawidłowa długość opisu firmy",
+    "wrong-cert-name-format": "Nieprawidłowa certyfikacja format nazwy",
+    "wrong-cert-name-length": "Nieprawidłowa długość nazwy certyfikatu",
+    "wrong-cert-desc-format": "Nieprawidłowy format opisu certyfikatu",
+    "wrong-cert-desc-length": "Nieprawidłowa długość opisu certyfikatu",
+    "wrong-company-link-title-format": "Nieprawidłowy format tytułu łącza firmy",
+    "wrong-company-link-title-length": "Nieprawidłowa długość tytułu łącza firmy",
+    "wrong-author-id-format": "Nieprawidłowy format identyfikatora autora",
+    "wrong-experience-id-format": "Nieprawidłowy format identyfikatora doświadczenia",
+    "wrong-certification-id-format": "Nieprawidłowy format identyfikatora certyfikacji",
+    "wrong-contact-name-format": "Nieprawidłowy format nazwy kontaktu",
+    "wrong-contact-name-length": "Nieprawidłowa długość nazwy kontaktu",
+    "wrong-pdf-name-format": "Nieprawidłowy format nazwy pliku PDF"
   },
   "wrong-timeframe": "Niewłaściwy przedział czasowy",
   "invalid-recovery-keys": "Nieprawidłowe klucze odzyskiwania",
@@ -75,5 +97,8 @@
   "order-by-error": "Niewłaściwa kolejność według wartości",
   "order-error": "Nieprawidłowa wartość kolejności",
   "user-not-logged-in": "Użytkownik niezalogowany",
-  "author-not-found": "Autor nie znaleziony"
+  "author-not-found": "Autor nie znaleziony",
+  "article-not-found": "Artykuł nie został znaleziony",
+  "certification-not-found": "Certyfikacja nie została znaleziona",
+  "experience-not-found": "Doświadczenie nie zostało znalezione"
 }
