--- a/src/assets/i18n/messages/errors/ru.json
+++ b/src/assets/i18n/messages/errors/ru.json
@@ -37,8 +37,6 @@
     "wrong-last-name-format": "Фамилия должна быть строкой",
     "wrong-location-length": "Минимальная длина локации 8 символов, максимальная 128 символов",
     "wrong-location-format": "Местоположение должно быть строкой",
-    "wrong-company-length": "Минимальная длина компании 2 символа, максимальная 64 символа",
-    "wrong-company-format": "Компания должна быть строкой",
     "wrong-fqdn": "Неверное полное доменное имя (URL)",
     "user-photo-must-be-base64": "Фото профиля пользователя должно быть PNG закодировано в формате Base64",
     "wrong-passphrase-format": "Неверный формат парольной фразы",
@@ -63,7 +61,29 @@
     "wrong-category-id-format": "Неверный формат идентификатора категории",
     "wrong-article-id-format": "Неверный формат идентификатора статьи",
     "wrong-categories-length": "Неверная длина категорий",
-    "wrong-article-length": "Неверная длина статьи"
+    "wrong-article-length": "Неверная длина статьи",
+    "wrong-link-format": "Неправильный формат ссылки",
+    "wrong-date-format": "Неправильный формат даты",
+    "wrong-author-first-format": "Неправильный формат имени автора",
+    "wrong-author-first-length": "Неправильная длина имени автора",
+    "wrong-author-last-format": "Неправильный формат фамилии автора",
+    "wrong-author-last-length": "Неправильная длина фамилии автора",
+    "wrong-company-name-format": "Неправильный формат названия компании",
+    "wrong-company-name-length": "Неправильная длина названия компании",
+    "wrong-company-desc-format": "Неправильный формат описания компании",
+    "wrong-company-desc-length": "Неправильная длина описания компании",
+    "wrong-cert-name-format": "Неправильный формат названия сертификации",
+    "wrong-cert-name-length": "Неправильный формат названия сертификации length",
+    "wrong-cert-desc-format": "Неправильный формат описания сертификации",
+    "wrong-cert-desc-length": "Неправильная длина описания сертификации",
+    "wrong-company-link-title-format": "Неправильный формат заголовка ссылки компании",
+    "wrong-company-link-title-length": "Неправильная длина заголовка ссылки компании",
+    "wrong-author-id-format": "Неправильный формат идентификатора автора",
+    "wrong-experience-id-format": "Неправильный формат идентификатора опыта",
+    "wrong-certification-id-format": "Неправильный формат идентификатора сертификации",
+    "wrong-contact-name-format": "Неправильный формат имени контакта",
+    "wrong-contact-name-length": "Неправильная длина имени контакта",
+    "wrong-pdf-name-format": "Неправильный формат имени PDF"
   },
   "wrong-timeframe": "Неверный таймфрейм",
   "invalid-recovery-keys": "Недействительные ключи восстановления",
@@ -77,5 +97,8 @@
   "order-by-error": "Неправильный порядок по значению",
   "order-error": "Неправильное значение порядка",
   "user-not-logged-in": "Пользователь не вошел в систему",
-  "author-not-found": "Автор не найден"
+  "author-not-found": "Автор не найден",
+  "article-not-found": "Статья не найдена",
+  "certification-not-found": "Сертификация не найдена",
+  "experience-not-found": "Опыт не найден"
 }
