--- a/src/assets/i18n/messages/responses/en.json
+++ b/src/assets/i18n/messages/responses/en.json
@@ -9,5 +9,13 @@
   "article-publish-status-changed": "Article publish status has been successfully changed",
   "category-created": "Category has been successfully created",
   "category-deleted": "Category has been successfully deleted",
-  "category-edited": "Category has been successfully edited"
+  "category-edited": "Category has been successfully edited",
+  "certification-deleted": "Certification has been successfully deleted",
+  "certification-updated": "Certification has been successfully updated",
+  "author-deleted": "Author has been successfully deleted",
+  "author-updated": "Author has been successfully updated",
+  "experience-deleted": "Experience has been successfully deleted",
+  "experience-updated": "Experience has been successfully updated",
+  "certification-file-uploaded": "Certification file has been successfully uploaded",
+  "tag-is-already-on-the-list": "Tag is already on the list"
 }
