list authors page

--- a/src/assets/i18n/components/button/pl.json
+++ b/src/assets/i18n/components/button/pl.json
@@ -62,5 +62,8 @@
   "certifications": "Certyfikaty",
   "createCert": "Utwórz certyfikat",
   "selectCertificationFile": "Wybierz plik certyfikacji",
-  "deleteCertFile": "Usuń plik certyfikacji"
+  "deleteCertFile": "Usuń plik certyfikacji",
+  "editAuthor": "Edytuj autora",
+  "changeAuthorSelection": "Zmień wybór autora",
+  "deleteAuthor": "Usuń autora"
 }
