--- a/src/assets/i18n/components/dropdown/pl.json
+++ b/src/assets/i18n/components/dropdown/pl.json
@@ -3,5 +3,6 @@
   "authApp": "Aplikacja authenticator",
   "selectMfaOption": "Wybierz opcję uwierzytelniania wieloskładnikowego",
   "articlesPerPage": "Artykułów na stronę",
-  "articleCategory": "Wybierz kategorię artykułu"
+  "articleCategory": "Wybierz kategorię artykułu",
+  "authorsPerPage": "Autorów na stronie"
 }
