--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -106,5 +106,8 @@
   "certExpirationDateDesc": "Если такой даты нет, просто оставьте это поле пустым",
   "certObtainedSkillLabel": "Навыки, полученные при сертификации",
   "certObtainedSkillPlaceholder": "Укажите навыки, которые вы получили при получении этой сертификации",
-  "certObtainedSkillDesc": "Нажмите пробел, чтобы добавить новый, и щелкните по существующему, чтобы удалить его"
+  "certObtainedSkillDesc": "Нажмите пробел, чтобы добавить новый, и щелкните по существующему, чтобы удалить его",
+  "authorQueryLabel": "Запрос автора",
+  "authorQueryPlaceholder": "Укажите запрос автора для поиска",
+  "authorQueryDesc": "Статьи будут найдены по их названиям и описанию"
 }
