--- a/src/assets/i18n/messages/responses/en.json
+++ b/src/assets/i18n/messages/responses/en.json
@@ -14,6 +14,7 @@
   "certification-updated": "Certification has been successfully updated",
   "author-deleted": "Author has been successfully deleted",
   "author-updated": "Author has been successfully updated",
+  "author-status-updated": "Author selection status has been successfully updated",
   "experience-deleted": "Experience has been successfully deleted",
   "experience-updated": "Experience has been successfully updated",
   "certification-file-uploaded": "Certification file has been successfully uploaded",
