--- a/src/assets/i18n/messages/responses/pl.json
+++ b/src/assets/i18n/messages/responses/pl.json
@@ -14,6 +14,7 @@
   "certification-updated": "Certyfikat został pomyślnie zaktualizowany",
   "author-deleted": "Autor został pomyślnie usunięty",
   "author-updated": "Autor został pomyślnie zaktualizowany",
+  "author-status-updated": "Status wyboru autora został pomyślnie zaktualizowany",
   "experience-deleted": "Doświadczenie zostało pomyślnie usunięte",
   "experience-updated": "Doświadczenie zostało pomyślnie zaktualizowane",
   "certification-file-uploaded": "Plik certyfikacji został pomyślnie przesłany",
