--- a/src/assets/i18n/messages/responses/ru.json
+++ b/src/assets/i18n/messages/responses/ru.json
@@ -14,6 +14,7 @@
   "certification-updated": "Сертификация успешно обновлена",
   "author-deleted": "Автор успешно удален",
   "author-updated": "Автор успешно обновлен",
+  "author-status-updated": "Статус выбора автора успешно обновлен",
   "experience-deleted": "Опыт успешно удален",
   "experience-updated": "Опыт успешно обновлен",
   "certification-file-uploaded": "Файл сертификации успешно загружен",
