--- a/src/assets/i18n/pages/authors/ru.json
+++ b/src/assets/i18n/pages/authors/ru.json
@@ -1,3 +1,7 @@
 {
-  "createAuthorTitle": "Создать нового автора"
+  "createAuthorTitle": "Создать нового автора",
+  "allAuthors": "Все авторы",
+  "noAuthors": "Авторы не найдены",
+  "authorCreatedAt": "Автор создан: {{ authorCreatedAt }}",
+  "authorUpdatedAt": "Автор обновлен: {{ authorUpdatedAt }}"
 }
