--- a/src/assets/i18n/components/button/en.json
+++ b/src/assets/i18n/components/button/en.json
@@ -62,5 +62,8 @@
   "certifications": "Certifications",
   "createCert": "Create a certification",
   "selectCertificationFile": "Select certification file",
-  "deleteCertFile": "Delete certification file"
+  "deleteCertFile": "Delete certification file",
+  "editAuthor": "Edit author",
+  "changeAuthorSelection": "Change author selection",
+  "deleteAuthor": "Delete author"
 }
