--- a/src/assets/i18n/components/dropdown/ru.json
+++ b/src/assets/i18n/components/dropdown/ru.json
@@ -3,5 +3,6 @@
   "authApp": "Приложение для аутентификации",
   "selectMfaOption": "Выберите вариант многофакторной идентификации",
   "articlesPerPage": "Статей на странице",
-  "articleCategory": "Выберите категорию статьи"
+  "articleCategory": "Выберите категорию статьи",
+  "authorsPerPage": "Авторов на странице"
 }
